--- a/k8s/application-deployment.yaml
+++ b/k8s/application-deployment.yaml
@@ -14,7 +14,7 @@ spec:
     spec:
       containers:
       - name: social
-        image: joelmukono/socalmonoapp
+        image: joelmukono/socalmonoapp:$COMMIT_SHA1
 ---
 apiVersion: v1
 kind: Service
