channge ingress to add capital.coin domain to config, test 1

--- a/k8s/ingress-nginx-service.yaml
+++ b/k8s/ingress-nginx-service.yaml
@@ -12,7 +12,7 @@ spec:
   #     - arewetogether.com
   #     secretName: awt-tls
   rules:
-    - host: ticketing.dev
+    - host: capitalcoin.space
       http:
         paths:
           - path: /
