--- a/k8s/ingress-nginx-service.yaml
+++ b/k8s/ingress-nginx-service.yaml
@@ -4,13 +4,13 @@ metadata:
   name: ingress-srv
   annotations:
     kubernetes.io/ingress.class: nginx
-    # cert-manager.io/cluster-issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
 
 spec:
-  # tls:
-  #   - hosts:
-  #     - arewetogether.com
-  #     secretName: awt-tls
+  tls:
+    - hosts:
+      - capitalcoin.space
+      secretName: awt-tls
   rules:
     - host: capitalcoin.space
       http:
